added Google Analytics, testing now. minor polish to asset

--- a/styles/pages/guanaco.module.css
+++ b/styles/pages/guanaco.module.css
@@ -149,7 +149,6 @@
 
 .eachAlbumCover:hover{
     filter: none;
-
 }
 
 .albumDataDisplayer{
@@ -259,6 +258,7 @@
 
     .eachAlbumCover{
        width: 50%;
+       filter: none;
     }
 
     .anAlbumData{
