--- a/styles/pages/guanaco.module.css
+++ b/styles/pages/guanaco.module.css
@@ -240,6 +240,46 @@
     margin: 0 12px;
 }
 
+
+/* Merch Section */
+.merchSectionCont{
+    min-height: 50vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: whitesmoke;
+    background-image: url("/assets/bands/guanaco/merchIntroParallaxIMG.png");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    padding: 21px;
+}
+
+.merchSectionCont h1{
+    font-weight: 400;
+    margin: unset;
+    padding: 66px;   
+    text-align: end;
+    width: 100%;
+    font-size: 2.5em;
+}
+
+.merchContainer{
+    background-color: white;
+    display: flex;
+   flex-direction: column;
+    border-top: solid 1px black;
+    border-bottom: solid 3px black;
+    min-height: 30vh;
+    width: 950px;
+    box-shadow: var(--aHighlightBoxShadow);
+    margin-bottom: 66px;
+}
+
+
 @media (max-width: 1080px) {
 
 }
