--- a/styles/pages/guanaco.module.css
+++ b/styles/pages/guanaco.module.css
@@ -283,7 +283,7 @@
     display: flex;
 }
 
-@media (max-width: 1080px) {
+@media only screen and (max-width: 1080px) {
     .merchContainer{
         width: 100%;
         justify-content: center;
@@ -297,7 +297,7 @@
     }
 }
 
-@media (max-width: 700px) {
+@media only screen and (max-width: 700px) {
     .merchSubCont{
         flex-direction: column;
         width: 280px;
@@ -346,6 +346,7 @@
     }
     .videoPickerBox{
         font-size: 0.9em;
+        width: 90%;
     }
 
     .musicVideoSection{
