--- a/styles/pages/guanaco.module.css
+++ b/styles/pages/guanaco.module.css
@@ -283,6 +283,92 @@
     display: flex;
 }
 
+/* cart */
+.cartDialog{
+  width: 400px;
+}
+
+.cartTitle{
+  padding: 0 15px;
+}
+
+.eachCartElemCont{
+  width: 360px;
+  margin: 12px;
+  padding: 12px;
+  border: solid 1px black;
+}
+
+.eachCartItemCont{
+  font-size: 0.9em;
+  border-bottom: dotted 1px black;
+  padding-bottom: 9px;
+}
+
+.cartItemName{
+  padding-top: 9px;
+  display: flex;
+  justify-content: space-between;
+  font-weight: 600;
+}
+
+.cartItmeDescription{
+  font-style: italic;
+  font-style: 0.8em;
+}
+
+.cartItmePrice{
+  text-align: end;
+  font-weight: 800;
+}
+
+.totalCartPrice{
+  padding-top: 15px;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Menu */
+.floatingMenu{
+    position: fixed;
+    top: 50%;
+    right: 0;
+    z-index: 44;
+    display: flex;
+    flex-direction: column;
+}
+
+.burgerCont{
+    display: flex;
+    flex-direction: column;
+    width: 44px;
+    height: 44px;
+    border: solid 2px white;
+    background-color: rgb(10, 12, 18);
+    justify-content: center;
+    align-items: center;
+}
+
+.burgerDeco{
+    width: 21px;
+    height: 1px;
+    margin: 2px 1px;
+    background-color: whitesmoke;
+}
+
+.cartDisplayer{
+    border: solid 2px white;
+    background-color: rgb(10, 12, 18);
+    color: white;
+    width: 44px;
+    height: 44px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 @media only screen and (max-width: 1080px) {
     .merchContainer{
         width: 100%;
@@ -373,5 +459,12 @@
     }
     .youtubeDispMOBILE{
         display: unset;
+    }
+      .cartDialog{
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
