--- a/styles/components/eventDisp.module.css
+++ b/styles/components/eventDisp.module.css
@@ -209,10 +209,11 @@
     display: flex;
     width: 100%;
     justify-content: space-around;
+    border-top: solid 1px black;
+    padding-top: 15px;
 }
 
 .aBannerIcon{
-
 }
 
 .eventBannerGenCont h1{
