--- a/styles/components/merch.module.css
+++ b/styles/components/merch.module.css
@@ -11,7 +11,7 @@
 .aMerchIMG{
     width: 240px;
     background-color: white;
-    filter: brightness(1.2) saturate(1.5);
+    filter: brightness(1.1) saturate(1.2) contrast(1.1);
 }
 
 .merchDescCont{
