--- a/styles/pages/guanaco.module.css
+++ b/styles/pages/guanaco.module.css
@@ -270,6 +270,7 @@
 .merchContainer{
     background-color: white;
     display: flex;
+    align-items: center;
     flex-direction: column;
     border-top: solid 1px black;
     border-bottom: solid 3px black;
@@ -282,6 +283,18 @@
 .merchSubCont{
     display: flex;
 }
+
+.marketPLCBTN{
+    width: 300px;
+    padding: 12px 21px;
+    text-align: center;
+    margin: 33px;
+    border-radius: 5px;
+    border: solid 2px black;
+    font-weight: 500;
+    cursor: pointer;
+}
+
 
 /* cart */
 .cartDialog{
@@ -390,6 +403,70 @@
     font-weight: 500;
     color: white;
     cursor: pointer;
+}
+
+.guanacoMenu{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 99vh;
+}
+
+.menuLogoIMG{
+    width: 300px;
+    margin: 21px;
+}
+.menuLogoWRX{
+    margin: 21px;
+    width: 150px;
+    cursor: pointer;
+}
+
+.aMenuOpt{
+    font-size: 2em;
+    border: solid 2px transparent;
+    padding: 6px 9px;
+    border-radius: 5px;
+    transition: 1s;
+    margin: 6px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.aMenuOpt:hover{
+    border: solid 2px black;
+}
+
+.marketplaceSectionCont{
+    min-height: 50vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: whitesmoke;
+    background-image: url("/assets/bands/guanaco/merchIntroParallaxIMG.png");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    padding: 21px;
+}
+
+.marketplaceSectionCont h1{
+    font-weight: 400;
+    margin: 33vh 0;
+    padding: 66px;   
+    text-align: end;
+    width: 100%;
+    font-size: 2.5em;
+}
+
+.MarketplaceCont{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 @media only screen and (max-width: 1080px) {
