--- a/styles/pages/guanaco.module.css
+++ b/styles/pages/guanaco.module.css
@@ -279,6 +279,18 @@
     box-shadow: var(--aHighlightBoxShadow);
     margin-bottom: 66px;
 }
+.merchContainer2{
+    background-color: white;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border-top: solid 1px black;
+    border-bottom: solid 3px black;
+    min-height: 30vh;
+    width: 950px;
+    box-shadow: var(--aHighlightBoxShadow);
+    margin-bottom: 42vh;
+}
 
 .merchSubCont{
     display: flex;
@@ -467,6 +479,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    /* padding-bottom: 33px; */
 }
 
 .closeMenuBTN{
