--- a/styles/pages/guanaco.module.css
+++ b/styles/pages/guanaco.module.css
@@ -495,6 +495,11 @@
         justify-content: center;
         align-items: center;
     }
+    .merchContainer2{
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
 
     .merchSubCont{
         flex-direction: column;
