--- a/styles/components/eventDisp.module.css
+++ b/styles/components/eventDisp.module.css
@@ -287,11 +287,17 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
+    border-top: solid 1px white;
+}
+
+.eachEventCont:first-child {
+    border-top: none;
 }
 
 .posterdispl{
     padding-left: 6px;
     padding-top: 6px;
+    cursor: pointer;
 }
 
 .closeDialogBTN{
