--- a/styles/components/eventDisp.module.css
+++ b/styles/components/eventDisp.module.css
@@ -54,13 +54,13 @@
 }
 
 .priceDetailMain{
-    font-size: 1.3em;
+    font-size: 1.2em;
 }
 
 .anEventPriceMain{
     width: 100%;
     text-align: end;
-    font-size: 1.3em;
+    font-size: 1.2em;
     margin: 6px;
 }
 
@@ -224,7 +224,7 @@
 .eventBannerGenCont i{
     font-weight: 400;
     border-top: solid 1px black;
-    padding: 18px 15px;
+    padding: 9px 15px;
     font-size: 0.8em;
     width: 100%;
 }
@@ -365,13 +365,18 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    transition: 1s;
 }
-/* ////////////////////////// */
-/* ////////////////////////// */
+
+.addToCartBTN:hover{
+    background-color: whitesmoke;
+    color: black;
+    border: solid 2px black;
+}
 
 
-
-
+/* ////////////////////////////////////////////////////////////// */
+/* ////////////////////////////////////////////////////////////// */
 
 @media (max-width: 1080px) {
     .eventContainer{
