--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -156,6 +156,17 @@
   background-color: black;
 }
 
+.homeSliderDesktopIMG{
+  background-color: black;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.mobileCarousel{
+  display: none;
+}
+
 @media (max-width: 1080px) {
   .aSectiontitle{
     width: 100%;
@@ -166,6 +177,14 @@
 }
 
 @media (max-width: 700px) {
+  .mobileCarousel{
+    display: unset;
+  }
+
+  .desktopCarousel{
+    display: none;
+  }
+
   .pichiLanding{
     display: none;
   }
