--- a/styles/components/eventDisp.module.css
+++ b/styles/components/eventDisp.module.css
@@ -240,11 +240,12 @@
     align-items: center;
     justify-content: center;
     padding: 12px 0;
+    background-color: black;
 }
 
 .backgroundImageCont {
     position: absolute;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     overflow: hidden;
     z-index: 0;
