--- a/styles/pages/guanaco.module.css
+++ b/styles/pages/guanaco.module.css
@@ -25,6 +25,7 @@
     bottom: calc(0vh + 94px);
     width: 40%;
     transition: 1s;
+    animation: logoMove 6s ease-in-out infinite;
 }
 .guanacoLogo2{
     transition: 1s;
@@ -33,8 +34,19 @@
     width: 40%;
 }
 
-.homeSplash:hover> .guanacoLogo {
+@keyframes logoMove {
+  0% {
+    transform: translate(0, 0);
+  }
+  35% {
     transform: translate(6px, 6px);
+  }
+  60%{
+    transform: translate(-6px, 9px);
+    }
+  100% {
+    transform: translate(0, 0);
+  }
 }
 
 .musicVideoSection{
@@ -251,10 +263,9 @@
     align-items: center;
     background-color: whitesmoke;
     background-image: url("/assets/bands/guanaco/merchIntroParallaxIMG.png");
-    background-attachment: fixed;
-    background-position: center;
+    background-position: 0 15%;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 90%;
     padding: 21px;
 }
 
