--- a/styles/components/merch.module.css
+++ b/styles/components/merch.module.css
@@ -77,6 +77,31 @@
     cursor: pointer;
 }
 
+.sizePicker{
+    display: flex;
+    justify-content: space-between;
+    border: solid 2px black;
+    border-radius: 5px;
+    margin: 6px 0;
+    padding: 6px 9px;
+}
+
+.aMerchSize{
+    font-size: 1.3em;
+    padding: 1px 6px;
+}
+.aMerchSize:hover{
+    background-color: black;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+}
+.aMerchSize:active{
+    background-color: black;
+    border-radius: 5px;
+    color: white;
+}
+
 .modalRow h2{
     text-transform: uppercase;
     padding: 0 9px;
